--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/WayneWu1017/tradingSecretary#readme",
   "dependencies": {
     "@binance/connector": "^2.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-binance-api": "^0.13.1",
     "nodemon": "^2.0.20"
